; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_show_adb_err_msg.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_show_adb_err_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"Failed to execute: %s\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Command not found: %s\00", align 1
@.str.2 = private unnamed_addr constant [94 x i8] c"(make 'adb' accessible from your PATH or define its fullpath in the ADB environment variable)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8**)* @show_adb_err_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_adb_err_msg(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca [512 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %21 [
    i32 130, label %7
    i32 129, label %13
    i32 128, label %20
  ]

7:                                                ; preds = %2
  %8 = load i8**, i8*** %4, align 8
  %9 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %10 = call i32 @argv_to_string(i8** %8, i8* %9, i32 512)
  %11 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %12 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %21

13:                                               ; preds = %2
  %14 = load i8**, i8*** %4, align 8
  %15 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %16 = call i32 @argv_to_string(i8** %14, i8* %15, i32 512)
  %17 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %18 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = call i32 (i8*, ...) @LOGE(i8* getelementptr inbounds ([94 x i8], [94 x i8]* @.str.2, i64 0, i64 0))
  br label %21

20:                                               ; preds = %2
  br label %21

21:                                               ; preds = %2, %20, %13, %7
  ret void
}

declare dso_local i32 @argv_to_string(i8**, i8*, i32) #1

declare dso_local i32 @LOGE(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
